nuxeo-platform-webapp-core/src/main/resources/themes/css/buttons_and_actions.css
/*
Styles for the buttons and actions.
=Buttons -> default buttons. Major is used in forms, when you want to highlight one action
=Syndication Button -> for RSS and Atom links
=Action Bar -> usually used under tabs, to display many different actions (from document creation to view mode)
=RightClick menu -> actions menu displayed by rightclick on links
author: lkemen@nuxeo.com
*/

/* =Buttons */
.button, input.button {
	box-shadow: 0 8px 3px rgba(255, 255, 255, 0.5) inset, 1px 1px 0 #efefef;
	background-color: "button (__FLAVOR__ background)";
	border-radius: 3px;
	border: 1px solid;  border-color: "button (__FLAVOR__ border)";
	color: "link.action (__FLAVOR__ color)";
	cursor: pointer;
	font-size: .9em;
	font-weight: bold;
	margin: .4em .9em .9em 0;
	padding: .3em .7em;
	text-decoration: none;
	text-shadow: 1px 1px 0 #fff;
	white-space: nowrap; }
.button:hover, input.button:hover {
  background: none "color.major.medium (__FLAVOR__ background)";
	border: 1px solid; border-color: "button.hover (__FLAVOR__ border)" }

input.button[disabled=disabled], input.button[disabled=disabled]:hover,
input.button[disabled], input.button[disabled]:hover {
	background: none "button.disabled (__FLAVOR__ background)";
	border: 1px solid; border-color: "button.disabled (__FLAVOR__ border)";
	color: "link.disabled (__FLAVOR__ color)";
	cursor: default;
	visibility: hidden }

a.button { color: "link.action (__FLAVOR__ color)"; display: inline-block; text-decoration: none }

.major, input.major {
	background: none repeat scroll 0 0 #0080b0;
	border: 1px solid #014C68;
	color: #fff;
	text-shadow: 1px 1px 0 #000 }
.major:hover, input.major:hover {
	background: none repeat scroll 0 0 #01a2df;
	border: 1px solid #0186b8 }

.smallButton, input.smallButton { font-size: 0.85em; padding: 0 .4em}

.dropdown, .dropdown:hover { background: url("${basePath}/icons/dropdown.png") no-repeat scroll right center transparent; padding: .25em 1.5em .2em .8em }

/* =Syndication Button */
div.syndicationButton { background-color: #ff9d5c; float: right; font-size: .7em; margin-bottom: .5em }
.syndicationContainer { height: 30px }
div.syndicationButton div.syndicationLinks {color: #fff; padding: .2em .4em }
div.syndicationButton div.syndicationLinks a { color: #fff }

/* =Action Bar */
.action_bar { float: left; line-height: normal; margin: 1em 1em 1em 0 }
.action_bar_message { float: right; font-size: .8em; margin: 0 }
.action_bar_message form { display: inline; text-align: right }
.action_bar ul { list-style: none; margin: 0; padding: 0 1em 0 0 }
.action_bar li { float: left; margin: 0; padding: 0 }
.action_bar a {
  box-shadow: 0 8px 3px rgba(255, 255, 255, 0.5) inset, 1px 1px 0 #efefef;
  background-color: "button (__FLAVOR__ background)";
  border-radius: 3px;
  border: 1px solid; border-color: "button (__FLAVOR__ border)";
  color: "link.action (__FLAVOR__ color)";
  cursor: pointer;
  float: left;
  font-size: .9em;
  font-weight: bold;
  margin-right: .9em;
  padding: .3em .7em .5em;
  text-decoration:none;
  white-space: nowrap }
.action_bar a:hover { background: none "color.major.medium (__FLAVOR__ background)";
border: 1px solid; border-color: "button.hover (__FLAVOR__ border)" }
.action_bar a img { float: left; margin: -0.2em .3em -0.3em -0.4em }
.action_bar a:focus { border-color: "color.major.strong (__FLAVOR__ border)"; }
.action_bar input[type="text"] { margin: 0 .2em }
.action_bar input.button { margin-top: 0 }
.contentViewQuickFilterForm .action_bar a { margin: 0 }

.listingLayoutSelector { color: "gray.medium (__FLAVOR__ color)"; float: right; margin: 1.1em 0 1em .7em; text-align: right }
.listingLayoutSelector .contentViewPageSelectorDesc { float: left; padding: 0 .4em 0 0 }
.listingLayoutSelector .langSelect { float: left; font-size: 0.8em; padding: .1em }

/* =Actionbar in Home */
.headerTitleAndTools { margin-bottom: 4em }
.headerTitleAndTools h1 { display: inline }
.headerTitleAndTools h1 span { color: "gray.light (__FLAVOR__ color)"; font-weight: normal }
.headerTitleAndTools .globalActionBar { float: right }
.globalActionBar h1 { float: left }
.globalActionBar .actionList { float: right; list-style: none; margin: 0; padding: 0 }
.globalActionBar .actionList li { cursor: pointer; display: block; font-weight: normal; margin: 0 0 0 .8em; position: relative; text-decoration: none; z-index:3000 }
.globalActionBar .actionList li a { color: "default (__FLAVOR__ color)"; padding: 0 }
.globalActionBar .actionList .actionSubList { background-color: #fff; border: 1px solid; border-color: "neutral.light (__FLAVOR__ border)"; border-radius: 3px; box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2); display:none; list-style: none; margin-top: 0.5em; padding: 0; position: absolute; right: 0; top: auto; width: 250px; z-index: 1001 }
.globalActionBar .actionList .actionSubList li { background: none; border: none; float: none; height: auto; margin: 0; padding: 0; text-align: left; max-width: 300px }
.globalActionBar .actionList .actionSubList li a { background: none; border: none; display: block; margin: 0; padding: .5em 1em; text-decoration: none; white-space: normal }
.globalActionBar .actionList .actionSubList li a:hover { background-color:"color.major.medium (__FLAVOR__ background)";}
.globalActionBar .actionSubList .smallIcon { margin: 0 .8em -0.2em 0 }

.separator { border-bottom: 1px solid #ddd }

/* =MainActions in Document Title Area */
.titleBlock { float: left; max-width: 60% }
.globalActions { text-align: right }
.globalActions .contextActions { padding: .4em 0 .5em }
  .globalActions .contextActions div { display: inline }
  .globalActions .contextActions div a { display: inline-block }
  .globalActions .contextActions div img { padding: -0.3em 0 0 }

/* Link on forms */
.actionLink { margin: .1em .4em .1em .1em }

/* =Foldablebox Action for Local Configuration*/
.foldableBox h3 a.action, .foldableBox h3 a.action:visited {
  box-shadow: 0 8px 8px #fff inset;
  background-color: "neutral.medium (__FLAVOR__ background)";
  border-radius: 3px;
  border: 1px solid;  border-color: "neutral.light (__FLAVOR__ border)";
  color: "black (__FLAVOR__ color)";
  float: right !important;
  font-size: 0.8em;
  font-weight: bold;
  margin: 0 .5em;
  padding: 0 .7em;
  text-decoration: none;
  text-shadow: 1px 1px 0 #fff }
.foldableBox h3 a.action:hover, .foldableBox h3 a.action:visited:hover { background: none "color.major.medium (__FLAVOR__ background)"; border: 1px solid; border-color: "neutral.medium (__FLAVOR__ border)"; float: right !important; }

/* =RightClick menu */
#contextMenu { position: absolute; visibility: hidden; top: 0; left: 0 }
.ctxMenuStyle { box-shadow: 2px 2px 5px #CCC; border: 2px solid #ddd; min-width: 120px; font-size: .7em }
.ctxMenuItemStyle, .ctxMenuItemHoverStyle { margin: 0; display: block; cursor: default; padding: .4em .5em; border-style: none none solid; border-width: 1px; border-color: "neutral.light (__FLAVOR__ border)"; background-color:#fff }
.ctxMenuItemHoverStyle { cursor: pointer; background-color: "color.major.medium (__FLAVOR__ background)" }
.ctxMenuItemStyle a, .ctxMenuItemHoverStyle a { display: block; text-decoration: none }
.ctxMenuImg { vertical-align: middle; padding: 0 .4em 0.1em 0 }

/* =Labels and tags */
.tag { background: "color.major.stronger (__FLAVOR__ background)"; border-radius: 3px; color: #fff; display: block; margin: .2em; padding: 0 .3em;}
.tagLink { display: inline-block }
.tagLink a { color: #fff; display: inline-block; opacity: 0.8; padding: 0 0 0 .2em; text-decoration: none }
.tagLink a:hover { opacity: 1 }
.tagLink img { border-left: 1px dotted rgba(255,255,255,0.4); display: inline; margin: 0 -0.1em -0.3em .2em }

.user, span.user, .group, span.group { background: url("${basePath}/icons/user.png") no-repeat scroll 2px 2px transparent; border: 1px solid; border-color: "neutral.light (__FLAVOR__ border)"; box-shadow: -1px -2px 2px rgba(140, 140, 140, 0.2) inset, 1px 1px 1px #fff inset; color: "gray.dark (__FLAVOR__ color)"; display: inline-block; opacity: 1; padding: .1em .3em .1em 1.8em }
.group, span.group { background: url("${basePath}/icons/group.png") no-repeat scroll 2px 2px transparent }
.user a { color: "link (__FLAVOR__ color)" }
span.user:hover { background-color: "color.major.light (__FLAVOR__ background)" ; border-color: "color.major.stronger (__FLAVOR__ border)" }
.user a:hover { text-decoration: none }
.description_block span.user { display: inline-block; font-size: 1em; padding: .1em .3em .1em 2.1em }

.sticker, .description_block .sticker { background-color: #fff; border: 1px solid; border-color: "neutral.light (__FLAVOR__ border)"; border-radius: 3px;	 display: inline-block; font-size: 1em; font-weight: bold; margin: .2em; padding: .1em .2em; text-transform: uppercase }

